SERVER-89503 Don't run moveCollection in background in stepdown/kill suites (#23153)

GitOrigin-RevId: 27ffd7d1811b457c1127084ebfadb3c613adbc05